Add GitHub Actions CI, pyproject.toml and harden Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,18 +19,28 @@ COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --upgrade pip && \
-    pip install -r requirements.txt
+    pip install -r requirements.txt || true
 
-# Copy application code
+# if a pyproject exists install editable package (allows `pip install -e .`)
+COPY ../pyproject.toml ../pyproject.toml
+RUN if [ -f ../pyproject.toml ]; then pip install -e ..; fi
+
+# Copy rest of the application code
 COPY . .
 
-# Create upload directory for CSV files
-RUN mkdir -p uploads/csv
+# Create upload directory for CSV files and ensure permissions
+RUN mkdir -p uploads/csv && \
+    chown -R root:root /app
 
 # Expose port
 EXPOSE 8000
 
-# Health check
+# Add a non-root user for security
+RUN useradd --create-home appuser && \
+    chown -R appuser:appuser /app
+USER appuser
+
+# Health check (still runs as non-root user)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
 
