Add flake8/black configs and placeholder Docker push step

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,9 @@ test = [
     "flake8"
 ]
 
+[tool.black]
+line-length = 88
+target-version = ['py313']
+
 [project.urls]
 "Homepage" = "https://github.com/rmagalhaesmg/smc_analisys"
