--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -34,3 +34,9 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t smc-analysis:ci . || true
+      - name: Push Docker image (optional)
+        if: github.ref == 'refs/heads/main' && secrets.DOCKER_USERNAME && secrets.DOCKER_PASSWORD
+        run: |
+          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
+          docker tag smc-analysis:ci $DOCKER_USERNAME/smc-analysis:latest
+          docker push $DOCKER_USERNAME/smc-analysis:latest || true
