--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -22,7 +22,11 @@ jobs:
       - name: Lint with flake8
         run: |
           pip install flake8
-          flake8 backend || true
+          flake8 backend
+      - name: Check formatting with black
+        run: |
+          pip install black
+          black --check backend || true
       - name: Run unit tests
         run: |
           cd backend
