--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.4",
     "react-scripts": "5.0.1",
     "recharts": "^3.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yaml": "^2.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
