scaffold proper auth/jwt architecture and fix requirements

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,14 @@
-fastapi
+﻿fastapi
 uvicorn[standard]
 python-dotenv
 pydantic
 aiofiles
 httpx
 python-multipart
+
+# persistence & auth
+SQLAlchemy
+alembic
+passlib[bcrypt]
+python-jose
+psycopg2-binary  # if using PostgreSQL/Railway
