fix: correct backend API URL

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,7 +3,7 @@
 # Definir variáveis no painel do Railway/Vercel
 
 # API Backend em Produção
-REACT_APP_API_URL=https://smc-api-prod.railway.app
+REACT_APP_API_URL=https://smcanalisys-production.up.railway.app
 REACT_APP_API_TIMEOUT=30000
 
 # Build
